# Cryptobot0.1

./: Cargo.toml  LICENSE  README.md  bitcoin_database.db
src/: fenetre.rs  get_btc.rs  main.rs  pente.rs
src/BFC_1/: README.md  brain.rs
src/BFC_1/Bot_mind/: algo_1.rs  analyse.rs
src/BFC_1/Bot_read/: pente.rs  pente_view.rs
src/Data/: get_btc.rs
src/Screen/: fenetre.rs
