[package]
name = "cryptobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
rusqlite = "0.25"
serde_json = "1.0"
chrono = "0.4"
# gtk = "0.18.1"
# cairo-rs = "0.6.0"
